--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,42 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<div class="container-fluid border border-5 border-danger bg-light d-flex justify-content-center">
+    <div class=" row mx-5 mb-5">
+        <div class="col-12">
+            <h1>Portafolio</h1>
+            <p>Donec ullamcoper nulla non metus auctor Fringilla. Vestibulum id ligula porta felis euismod semper.
+                Praesent
+                commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="ratio ratio-16x9">
+                    <img src="https://images.pexels.com/photos/417074/pexels-photo-417074.jpeg?cs=srgb&dl=pexels-souvenirpixels-417074.jpg&fm=jpg"
+                        alt="">
+                </div>
+                <h3 class="mt-3 text-primary text-opacity-75">Projecto Name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error esse nihil officiis excepturi nulla
+                    rerum saepe modi earum quasi tempora!</p>
+            </div>
+            <div class="col-4">
+                <div class="ratio ratio-16x9">
+                    <img src="https://images.pexels.com/photos/417074/pexels-photo-417074.jpeg?cs=srgb&dl=pexels-souvenirpixels-417074.jpg&fm=jpg"
+                        alt="">
+                </div>
+                <h3 class="mt-3 text-primary text-opacity-75">Projecto Name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error esse nihil officiis excepturi nulla
+                    rerum saepe modi earum quasi tempora!</p>
+            </div>
+            <div class="col-4">
+                <div class="ratio ratio-16x9">
+                    <img src="https://images.pexels.com/photos/417074/pexels-photo-417074.jpeg?cs=srgb&dl=pexels-souvenirpixels-417074.jpg&fm=jpg"
+                        alt="">
+                </div>
+                <h3 class="mt-3 text-primary text-opacity-75">Projecto Name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error esse nihil officiis excepturi nulla
+                    rerum saepe modi earum quasi tempora!</p>
+            </div>
+        </div>
+
+    </div>
+
+</div>
