--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,32 +1,34 @@
 <!-- your html code here -->
-<div class="container-fluid border border-5 border-danger bg-light d-flex justify-content-center m-0">
-    <div class="mx-5">
+<div class="container-fluid border border-5 border-danger bg-light d-flex justify-content-center mt-2">
+    <div class="m-5">
         <div class="row mx-5">
             <div class="col-12">
-                <h2>Contact</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro accusantium voluptates similique
-                    rerum commodi vitae esse alias repellendus, aut delectus, doloremque, molestiae eveniet consequuntur
-                    explicabo.</p>
+                <h1>Contact</h1>
+                <p class="fs-5">Donec ullamcorper nulla non metus auctor Fringilla. Vestibulum id ligula porta felis euismod semper.Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             </div>
         </div>
-        <div class="row">
-            <div>
-                <form>
-                    <div class="row mb-3">
-                        <label for="inputEmail3" class="col-sm-1 col-form-label">Email</label>
-                        <div class="col-sm-11">
-                            <input type="email" class="form-control" id="inputEmail3">
+        <div class="row justify-content-center mx-5">
+            <div class="col-8 border border-1 bg-secondary bg-opacity-10 rounded">
+                <form class="">
+                    <div class="row mb-3 mt-2 d-flex justify-content-end">
+                        <label for="inputEmail3" class="col-sm-2 col-form-label d-flex justify-content-end fw-bolder">Your
+                            E-mail</label>
+                        <div class="col-sm-9">
+                            <input type="email" class="form-control" id="inputEmail3" placeholder="Your email">
                         </div>
                     </div>
-                    <div class="row mb-3">
-                        <label for="inputPassword3" class="col-sm-1 col-form-label">Password</label>
-                        <div class="col-sm-11">
-                            <input type="password" class="form-control" id="inputPassword3">
+                    <div class="row mb-3 d-flex justify-content-end">
+                        <label for="inputPassword3" class="col-sm-2 col-form-label d-flex justify-content-end fw-bolder">Your
+                            Message</label>
+                        <div class="col-sm-9">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Please enter your message here..."></textarea>
                         </div>
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-primary btn-lg mb-4">Submit</button>
                     </div>
                 </form>
             </div>
-
         </div>
 
     </div>
