--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-4">
                     <div class="ratio ratio-16x9">
-                        <img src="https://images.pexels.com/photos/417074/pexels-photo-417074.jpeg?cs=srgb&dl=pexels-souvenirpixels-417074.jpg&fm=jpg"
+                        <img src="/website/assets/img/big-project-image.png"
                             alt="">
                     </div>
                     <h3 class="mt-3 text-primary text-opacity-75">Projecto Name</h3>
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-4">
                     <div class="ratio ratio-16x9">
-                        <img src="https://images.pexels.com/photos/417074/pexels-photo-417074.jpeg?cs=srgb&dl=pexels-souvenirpixels-417074.jpg&fm=jpg"
+                        <img src="/website/assets/img/big-project-image.png"
                             alt="">
                     </div>
                     <h3 class="mt-3 text-primary text-opacity-75">Projecto Name</h3>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="col-4">
                     <div class="ratio ratio-16x9">
-                        <img src="https://images.pexels.com/photos/417074/pexels-photo-417074.jpeg?cs=srgb&dl=pexels-souvenirpixels-417074.jpg&fm=jpg"
+                        <img src="/website/assets/img/big-project-image.png"
                             alt="">
                     </div>
                     <h3 class="mt-3 text-primary text-opacity-75">Projecto Name</h3>
