--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,5 +1,5 @@
 <!-- your html code here -->
-<div class="container-fluid border border-5 border-danger bg-light d-flex justify-content-center mt-2">
+<div class="container-fluid d-flex justify-content-center mt-2">
     <div class="m-5">
         <div class="row mx-5">
             <div class="col-12">
@@ -8,7 +8,7 @@
             </div>
         </div>
         <div class="row justify-content-center mx-5">
-            <div class="col-8 border border-1 bg-secondary bg-opacity-10 rounded">
+            <div class="col-8 border border-secondary bg-secondary bg-opacity-25 rounded">
                 <form class="">
                     <div class="row mb-3 mt-2 d-flex justify-content-end">
                         <label for="inputEmail3" class="col-sm-2 col-form-label d-flex justify-content-end fw-bolder">Your
