--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,6 +1,6 @@
 <!-- your html code here -->
 
-<div class="container-fluid border border-5 border-danger bg-light d-flex justify-content-center m-0">
+<div class="container-fluid d-flex justify-content-center m-0">
     <div class="mx-5">
         <div class=" row mx-5 mb-5">
             <div class="col-12">
