mi parte hecha atualizada

--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -34,9 +34,9 @@ body{
     margin-right: 2px;
     padding: auto;
 }
-h1{
+#title2{
     font-size: 120px;
 }
-h2{
+#title3{
     font-size: 70px;
 }
