--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -5,8 +5,8 @@
        
         <section class="galery" id="galery1">
 
-            <aside class="title"><h1>One Page Wonder</h1></aside>
-            <aside class="title1"><h2>Will Knock Your Socks Off</h2></aside>
+            <aside class="title"><h1 id="title2">One Page Wonder</h1></aside>
+            <aside class="title1"><h2 id="title3">Will Knock Your Socks Off</h2></aside>
 
         </section>
 
