--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -17,20 +17,20 @@ body{
 }
 .title{
     text-align: center;
-    width: 1480px;
+    width: 99%;
     margin-top: 60px;
     background-color: aliceblue;
-     margin-left: 2px;
-    margin-right: 2px;
+     margin-left: 6px;
+    margin-right: 2%;
     padding: auto;
     
 }
 .title1{
     text-align: center;
-    width: 1480px;
+    width: 99%;
     margin-top: 20px;
     background-color: aliceblue;
-    margin-left: 2px;
+    margin-left: 6px;
     margin-right: 2px;
     padding: auto;
 }
