--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -2,7 +2,7 @@
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
 <div>
 
-    <main class="main container">
+    <main class="main container-fluid">
 
         <section class="galery" id="galery1">
             
